--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2": "^1.113.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.113.0",
+    "@aws-cdk/aws-dynamodb": "^1.113.0",
+    "@aws-cdk/aws-lambda": "^1.113.0",
     "@aws-cdk/core": "1.113.0",
+    "aws-sdk": "^2.947.0",
     "source-map-support": "^0.5.16"
   }
 }
